--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li><a href="#project">Projects</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="learn.html">Learn</a></li>
 				</ul>
 			</nav>
 
